# llm-zoomcamp-2026-code

./: pyproject.toml
homework/llm-zoomcamp-hw2/: LLM Zoomcamp 2026 office hours week 2.md  hw2.py  hw4.py  pyproject.toml
homework/llm-zoomcamp-hw3/: readme.md
homework/llm-zoomcamp-hw5/: hw5.py  starter.py
homework/week1/: hw1.py  pyproject.toml  rag_helper.py
