[project]
name = "llm-zoomcamp-2026-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "minsearch>=0.0.8",
    "openai>=2.43.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]

[tool.uv.workspace]
members = [
    "homework/week1",
    "homework/llm-zoomcamp-hw5",
]
